[tool.poetry]
name = "django_api_docs"
version = "0.1.0"
description = "Prepare a nice pretty version of Django API docs"
authors = ["Brian Wisti <brianwisti@pobox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
parso = "^0.8.3"
Django = "^4.0"
rich = "^10.16.1"
pydantic = "^1.8.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
